fix result circle shift

--- a/app/src/app/result/result.component.scss
+++ b/app/src/app/result/result.component.scss
@@ -21,6 +21,7 @@ $circleColorE: #FF1854;
     position: relative;
     width: 300px;
     height: 300px;
+    display: inline-block;
 
     .circle {
         border-radius: 50%;
